--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
         fail-fast: false
         matrix:
-          mono-version: ["6.10.0.104", "6.12.0.182"]
+          mono-version: ["6.10.0.104", "6.12.0.182", "6.12.0.200"]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
