--- a/6.10.0.104/Dockerfile
+++ b/6.10.0.104/Dockerfile
@@ -1,4 +1,4 @@
-FROM mono:6.10.0.104-slim
+FROM ijs01140/mono:6.10.0.104-slim
 
 # MAINTAINER Jo Shields <jo.shields@xamarin.com>
 # MAINTAINER Alexander Köplinger <alkpli@microsoft.com>
