install ca-certificates

--- a/6.12.0.206/Dockerfile
+++ b/6.12.0.206/Dockerfile
@@ -12,4 +12,7 @@ RUN cd /tmp && \
 
 FROM debian:bookworm-slim
 
+RUN apt-get update && \
+  apt-get install -y ca-certificates && \
+  rm -rf /var/lib/apt/lists/* /tmp/*
 COPY --from=build /usr/local /usr/local/
